# python-performance-optimization

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: bench_concurrency.py  bench_monte_carlo.py  bench_vectorization.py
