[project]
name = "python-performance-showcase"
version = "0.1.0"
description = "Showcase of Python performance optimization techniques"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "numba>=0.59",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "memory-profiler>=0.61",
    "line-profiler>=4.1",
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
]

[project.optional-dependencies]
dev = [
    "cython>=3.0",
    "black",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

